tests/fixtures/invalid/var_paren_in_key.wks
# Test variable name containing ')' error
:var "bad)" "value"
a "Test" +write %{{echo test}}
